--- a/docker/docker-nginx.conf
+++ b/docker/docker-nginx.conf
@@ -11,7 +11,7 @@ server {
     expires max;
     alias /usr/src/app/static/;
   }
-  location ~ /kcs\d?/resources(/image)?/world/(.*)\.png$ {
+  location ~ /kcs2/resources/world/(.*)\.png$ {
     expires -1;
     add_header Cache-Control no-store;
     proxy_connect_timeout 1m;
