--- a/docker/docker-nginx.conf
+++ b/docker/docker-nginx.conf
@@ -1,7 +1,7 @@
 proxy_cache_path /usr/src/app/cache levels=1:2 keys_zone=my_cache:10m max_size=10g inactive=60m use_temp_path=off;
 server {
   listen 80;
-  server_name www.ooi.moe ooi.moe;
+  server_name _;
 
   location = /favicon.ico {
     expires max;
@@ -18,16 +18,24 @@ server {
     proxy_read_timeout 1m;
     proxy_pass http://127.0.0.1:9999;
   }
-  location ~ /kcs\d?/ {
+  location ~ /kcs/ {
     proxy_cache my_cache;
     proxy_cache_revalidate on;
     #proxy_cache_background_update on;
     proxy_cache_lock on;
     proxy_cache_key $scheme$host$request_uri;
-    proxy_pass http://203.104.209.102;
+    proxy_pass http://203.104.209.102/kcs/;
     expires 1M;
   }
-
+  location ~ /kcs2/ {
+    proxy_cache my_cache;
+    proxy_cache_revalidate on;
+    #proxy_cache_background_update on;
+    proxy_cache_lock on;
+    proxy_cache_key $scheme$host$request_uri;
+    proxy_pass http://203.104.209.102/kcs2/;
+    expires 1M;
+  }
   location / {
     gzip_vary on;
     gzip_proxied any;
