--- a/docker/docker-nginx.conf
+++ b/docker/docker-nginx.conf
@@ -1,7 +1,7 @@
 proxy_cache_path /usr/src/app/cache levels=1:2 keys_zone=my_cache:10m max_size=10g inactive=60m use_temp_path=off;
 server {
   listen 80;
-  server_name _;
+  server_name www.ooi.moe ooi.moe;
 
   location = /favicon.ico {
     expires max;
