--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ aiohttp-jinja2==0.7.0
 aiohttp-session==0.5.0
 cffi==1.5.2
 chardet==2.3.0
-cryptography==1.8.1
-idna==2.0
+cryptography
+idna
 Jinja2==2.8
 MarkupSafe==0.23
 pyasn1==0.1.9
